--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/MicrosoftEdge/pushnotifications-demo#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.0.12"
+    "mongoose": "^5.0.12",
+    "web-push": "^3.3.0"
   },
   "devDependencies": {
     "del": "^3.0.0",
