--- a/web.config
+++ b/web.config
@@ -35,7 +35,7 @@
             <!-- We set the mimeType for all the types we are going to use in the site. IIS supports a few of those but
                  they not always have the right values so we are explicit.
                  Also we set `cache-control: no-cache` by default. We will override this based on the file's path
-                 See https://docs.microsoft.com/en-us/iis/configuration/system.webserver/staticcontent/clientcache for more info -->
+                 See https://learn.microsoft.com/iis/configuration/system.webserver/staticcontent/clientcache for more info -->
             <clientCache cacheControlMode="DisableCache" />
             <!-- The brotli mime type is unknown to IIS, we need it or otherwise files will not be served correctly -->
             <remove fileExtension=".br" />
